--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -653,7 +653,7 @@
     <div class="container">
         <div class="content-wrapper">
             <div class="header">
-                <h1>{% block header_title %}CTV Booked Biz Reports{% endblock %}</h1>
+                <h1>{% block header_title %}SpotOps Reports{% endblock %}</h1>
                 <div class="subtitle">{% block header_subtitle %}Revenue Analysis and Performance Tracking{% endblock %}</div>
             </div>
             
