--- a/src/web/templates/pricing/pricing_consistency.html
+++ b/src/web/templates/pricing/pricing_consistency.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "pricing/_pricing_layout.html" %}
 
 {% block title %}Pricing Consistency Analysis{% endblock %}
 
